--- a/portfolio/src/assets/main.css
+++ b/portfolio/src/assets/main.css
@@ -5,19 +5,16 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0);
   position: sticky;
   top: 0;
 }
 
 h1 {
   text-align: center;
-  flex-grow: 1;
-  font-family: 'Montserrat', sans-serif;
   font-weight: bold;
-  color: #333;
   font-size: 2.5rem;
-  margin: 0;
+  margin: 0 0 0 0;
 }
 
 header.scrolled {
@@ -134,7 +131,7 @@ div{
 }
 #presentation{
   border-radius: 4%;
-  background-color: #B3DEE5;
+  background-color: #bacec1;
   display: flex;
   flex-direction: column;
   text-align: left;
