--- a/portfolio/src/assets/main.css
+++ b/portfolio/src/assets/main.css
@@ -41,7 +41,7 @@ header.scrolled {
   width: 40px;
   cursor: pointer;
 }
-  
+
 .navbar {
   list-style: none;
   display: flex;
@@ -50,7 +50,9 @@ header.scrolled {
   position: relative;
 }
   
-.navlist {
+#navlist {
+  display: none;
+  flex-direction: column;
   list-style: none;
   padding-left: 0;
   margin: 0;
@@ -64,7 +66,7 @@ header.scrolled {
   border-radius: 10%;
 }  
   
-.navlist li {
+#navlist li {
   list-style: none;
   padding: 10px;
   cursor: pointer;
@@ -72,16 +74,16 @@ header.scrolled {
   color: black;
 }
   
-.navlist li:hover {
+#navlist li:hover {
   background-color: #f0f0f0;
 }
   
-.navlist li a {
+#navlist li a {
   color: black;
   text-decoration: none;
 }
   
-.navlist li a:hover {
+#navlist li a:hover {
   text-decoration: underline;
 }
   
@@ -91,7 +93,7 @@ header.scrolled {
   top: 10px;
 }
   
-.navbutton {
+#navbutton {
   position: fixed;
   left: 20px;
   top: 60px;
@@ -101,7 +103,7 @@ ul {
   list-style: none;
 }
   
-.navlist li.active a {
+#navlist li.active a {
   text-decoration: underline;
   font-weight: bold;
 }
@@ -237,7 +239,7 @@ article:hover {
   text-align: center;
 }
 #modalOverlayCDC {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -250,7 +252,7 @@ article:hover {
 }
   
 #modalCDC {
-  display: flex;
+  display: none;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -292,7 +294,7 @@ article:hover {
   text-align: center;
 }
 #modalOverlayEC {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -305,7 +307,7 @@ article:hover {
 }
   
 #modalEC {
-  display: flex;
+  display: none;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
